--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -24,9 +24,15 @@
     margin: 2rem auto;
   }
   .show-navigation {
-    grid-template-columns: 1fr;
-    width: 30%;
-    grid-row-gap: 1em;
+    // grid-template-columns: 1fr;
+    // width: 30%;
+    // grid-row-gap: 1em;
+    display: flex;
+    flex-direction: column;
+  }
+  .button-show {
+    margin: 1rem 0;
+    width: 10rem;
   }
   //story
   .story-content-wrap {
