--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -6,6 +6,7 @@
   background-color: $green;
   border-radius: 1rem;
   display: grid;
+  object-fit: contain;
 }
 .story-content-wrap {
   width: 100%;
