corrected translation mistakes in team

--- a/_layouts/team-de.html
+++ b/_layouts/team-de.html
@@ -15,7 +15,7 @@ layout: default-de
       <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
       <h2>Philipp Schaefer</h2>
       <h4>Germany</h4>
-      <h3>Actress and Theatre-Maker</h3>
+      <h3>Musikclown</h3>
       <p>{{ page.philipp }}</p>
     </div>
 
@@ -23,7 +23,7 @@ layout: default-de
       <img src={{ "/assets/images/avatar-florian.png" | relative_url }} alt="">
       <h2>Florian Josef Blank</h2>
       <h4>Germany</h4>
-      <h3>Actress and Theatre-Maker</h3>
+      <h3>Multi-Instrumentalist</h3>
       <p>{{ page.florian }}</p>
     </div>
 
