--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -9,6 +9,9 @@ layout: default
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.berta }}</p>
+      <div>
+        <img class="action-figure berta" src="../../assets/images/berta-in-action.png" alt="">
+      </div>
     </div>
 
     <div class="philipp person">
@@ -17,6 +20,9 @@ layout: default
       <h4>Germany</h4>
       <h3>Music Clown</h3>
       <p>{{ page.philipp }}</p>
+      <div>
+        <img class="action-figure philipp" src="../../assets/images/philipp-in-action.png" alt="">
+      </div>
     </div>
 
     <div class="florian person">
@@ -25,9 +31,12 @@ layout: default
       <h4>Germany</h4>
       <h3>Multi-Instrumentalist</h3>
       <p>{{ page.florian }}</p>
+      <div>
+        <img class="action-figure flo" src="../../assets/images/florian-in-action.png" alt="">
+      </div>
     </div>
 
-    <img class="action-figure berta" src="../../assets/images/berta-in-action.png" alt="">
-    <img class="action-figure philipp" src="../../assets/images/philipp-in-action.png" alt="">
-    <img class="action-figure flo" src="../../assets/images/florian-in-action.png" alt="">
+
+
+
   </div>
