--- a/_sass/facts.scss
+++ b/_sass/facts.scss
@@ -1,10 +1,10 @@
 .facts {
+  display: flex;
+  justify-content: space-around;
   margin-top: -20rem;
   position: relative;
-  display: grid;
+  margin-top: 1rem;
   align-items: center;
-  grid-template-columns: 50% 50%;
-  justify-items: center;
 }
 .left-column-facts {
   display: flex;
@@ -12,11 +12,6 @@
   justify-content: flex-start;
 }
 .crdc-map {
-  background: url(/crdc/assets/images/image-drum-circle-set.png);
-  width: 90%;
-  padding-top: 9/16 * 90%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: solid $yellow;
+  border: solid 1px;
+  width: 40rem;
 }
