--- a/_layouts/facts-de.html
+++ b/_layouts/facts-de.html
@@ -10,6 +10,7 @@ layout: default-de
   </div>
 
   <div class="crdc-map">
+    <img class="crdc-map"src="/crdc/assets/images/image-drum-circle-set.png" alt="">
   </div>
-
+  
 </div>
