--- a/_layouts/facts.html
+++ b/_layouts/facts.html
@@ -10,6 +10,7 @@ layout: default
   </div>
 
   <div class="crdc-map">
+    <img class="crdc-map"src="/crdc/assets/images/image-drum-circle-set.png" alt="">
   </div>
 
 </div>
