--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -1,10 +1,8 @@
 .show-wrapper {
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: flex;
   align-items: center;
   justify-items: center;
-  width: 100%;
-  // margin-top: -2rem;
+  // margin-bottom: 3rem;
 }
 .expectations {
   text-align: right;
@@ -66,6 +64,7 @@ td > p {
   justify-content: center;
 }
 .button-show {
+  width: 10rem;
   margin: 0 5em;
   padding: 1em 2em;
   background: $yellow;
@@ -89,8 +88,8 @@ a.button-show:hover {
   color: $blue;
 }
 .img-show{
-  margin: 0 2em 8em 0;
-  width: 70%;
-  padding-top: 46%;
+  margin-top: -3rem;
+  margin-right: 3rem;
+  width: 30rem;
   border: solid 3px;
 }
