fixed mobile css bugs

--- a/_layouts/the-show-de.html
+++ b/_layouts/the-show-de.html
@@ -3,6 +3,7 @@ layout: default-de
 ---
 <div class="show-wrapper">
   <div class="table-wrap">
+    <div>
       <table>
         <tbody>
           <tr>
@@ -24,6 +25,9 @@ layout: default-de
         </tbody>
       </table>
 
+    </div>
+
+    <div>
       <table class="offer">
         <tbody>
           <tr>
@@ -44,8 +48,8 @@ layout: default-de
         </tbody>
       </table>
     </div>
-
-
+  </div>
+  
     <div class="img-show-wrap">
       <img class="img-show" src="{{ page.image | relative_url }}" alt="">
     </div>
