fixed contact page

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -1,8 +1,7 @@
 .contact-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   height: 80%;
   margin-top: -10rem;
 }
