--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -2,28 +2,25 @@
   width: 65%;
   height: min-content;
   margin: 1rem auto 2rem auto;
-  padding: 2rem 4rem;
+  padding: 2rem 0 2rem 2rem;
   background-color: $green;
   border-radius: 1rem;
-  display: grid;
-  object-fit: contain;
+  display: flex;
 }
 .story-content-wrap {
-  width: 100%;
-  margin: auto;
-  padding: auto;
-  display: grid;
-  grid-template-columns: 70% 30%;
+  display: flex;
   align-items: center;
 }
 .story-text {
+  width: 90%;
   p {
     color: black;
   }
+  z-index: 5;
 }
 
 .story-images {
-  width: 70%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,20 +31,16 @@
 }
 
 .story-image-1 {
-  background: url("/crdc/assets/images/story-image-1.jpg");
   transform: rotate(14deg);
 }
 .story-image-2 {
-  background: url("/crdc/assets/images/story-image-2.jpg");
   transform: rotate(-14deg);
 }
 .story-image-1, .story-image-2 {
-  max-width: 1024px;
-  width: 75%;
-  border: solid 2px;
-  padding-top: 3 / 4 * 75%;
-  background-repeat: no-repeat;
-  background-size: cover;
+  img {
+    width: 10rem;
+    border: solid 1px;
+  }
 }
 .story-text-wrap {
   height: 25rem;
