flexed last grids

--- a/_sass/impressum.scss
+++ b/_sass/impressum.scss
@@ -1,9 +1,10 @@
 .impressum-wrap {
   display: flex;
-  justify-items: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 80%;
   margin: auto 4em;
+
 }
 .privacy-policy {
   width: 40%;
