--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -73,6 +73,8 @@ body {
   min-height: 100%;
 }
 body.default-background {
+  display: flex;
+  flex-direction: column;
   background:    linear-gradient(
       rgba(73, 146, 124, 0.7),
       rgba(73, 146, 124, 0.7)
