--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -4,6 +4,10 @@
   justify-content: space-evenly;
   // margin-bottom: 3rem;
 }
+.expect-offer-wrap {
+  display: flex;
+  flex-direction: row;
+}
 .expectations {
   text-align: right;
   padding-right: 0.5em;
