--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -1,26 +1,21 @@
 .show-wrapper {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
-  // margin-bottom: 3rem;
 }
 .expect-offer-wrap {
   display: flex;
   flex-direction: row;
+  margin-right: 0.5rem;
 }
-.expectations {
+.expectation {
   text-align: right;
   padding-right: 0.5em;
-  vertical-align: baseline;
-}
-.statement {
-  vertical-align: bottom;
 }
 .offer {
   padding-left: 0.5em;
-}
-
-.offer {
   margin-top: 3rem;
   margin-left: 2rem;
 }
