removed list from friends

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -1,9 +1,7 @@
 .contact-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  height: 80%;
-  margin-top: -10rem;
+  justify-content: space-evenly;
 }
 .contacts {
   text-align: center;
