--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -36,8 +36,7 @@ h1.center-title {
 }
 h2{
   font-size: 20px;
-  font-weight: 400;
-  text-decoration: underline;
+  font-weight: bolder;
 }
 h3 {
   font-weight: 900;
