--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,20 +1,24 @@
 .story-wrap {
+  display: flex;
+  flex: 1;
   width: 65%;
-  height: min-content;
+  max-height: 22rem;
   margin: 1rem auto 2rem auto;
   padding: 2rem 0 2rem 2rem;
   background-color: $green;
   border-radius: 1rem;
-  display: flex;
 }
 .story-content-wrap {
   display: flex;
   align-items: center;
+  max-height: 25rem;
 }
 .story-text {
+  overflow: scroll;
+  max-height: 20rem;
   width: 90%;
   p {
-    color: black;
+    color: #212121;
   }
   z-index: 5;
 }
@@ -42,12 +46,12 @@
     border: solid 1px;
   }
 }
-.story-text-wrap {
-  height: 25rem;
-  display: block;
-  overflow: scroll;
-  padding: 0 2rem;
-}
+// .story-text-wrap {
+//   height: 25rem;
+//   display: block;
+//   overflow: scroll;
+//   padding: 0 2rem;
+// }
 .story-arrow.fas.fa-arrow-down {
   position: absolute;
   bottom: 0;
