--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,5 +1,10 @@
 .story-wrap {
+  flex: 1;
+}
+.story-content-wrap {
   display: flex;
+  align-items: center;
+  max-height: 25rem;
   flex: 1;
   width: 65%;
   max-height: 22rem;
@@ -7,11 +12,6 @@
   padding: 2rem 0 2rem 2rem;
   background-color: $green;
   border-radius: 1rem;
-}
-.story-content-wrap {
-  display: flex;
-  align-items: center;
-  max-height: 25rem;
 }
 .story-text {
   overflow: scroll;
