fixed sticky footer fo IE... maybe...

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -27,6 +27,10 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.content {
+  flex: 1 0 0;
+  margin-top: 2rem;
+}
 h1 {
   font-weight: 900;
   font-size: 26px;
