--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
   {% include head.html %}
   <body class="default-background">
     {% include header.html %}
-    {{ content }}
+    <div class="content">
+      {{ content }}
+    </div>
     {% include footer.html %}
   </body>
 </html>
