--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -14,6 +14,7 @@ body.home {
 .content-home {
   display: flex;
   justify-content: space-around;
+  flex: 1 0 0;
 }
 .header-home {
   padding-top: 1rem;
