--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -4,7 +4,7 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
-  flex: 1;
+  flex: 1 0 0;
 }
 .expect-offer-wrap {
   display: flex;
