centering content and sticking footer

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -3,7 +3,9 @@
   {% include head-de.html %}
   <body class="default-background">
     {% include header-de.html %}
-    {{ content }}
+    <div class="content">
+      {{ content }}
+    </div>
     {% include footer-de.html %}
   </body>
 </html>
