--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -6,6 +6,11 @@
   justify-content: space-evenly;
   flex: 1 0 0;
 }
+// .show-container {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-evenly;
+// }
 .expect-offer-wrap {
   display: flex;
   flex-direction: row;
