--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -28,7 +28,12 @@ body {
   justify-content: space-between;
 }
 .content {
-  flex: 1 0 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1 0 auto;
   margin-top: 2rem;
 }
 h1 {
