full width show footer and fixing flex grow for IE

--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -30,7 +30,7 @@
   flex-shrink: 0;
 }
 .show-footer {
-  width: 100%;
+  width: 100vw;
   padding-top: 2em;
   border-top: solid 3px;
   display: flex;
