--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -18,6 +18,7 @@ $happy: 'Henny-Penny';
 }
 body {
   position: relative;
+  height: 0;
   min-height: 829px;
   background-size: cover;
   background-repeat: no-repeat;
