is IE reloading?

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -5,7 +5,7 @@ layout: default
   <div class="team">
     <div class="berta person">
       <img src={{ "/assets/images/avatar-berta.png" | relative_url }} alt="">
-      <h2>Roberta Del Ben</h2>
+      <h2>aaRoberta Del Ben</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.berta }}</p>
