fixed missing closed tag in navigation

--- a/_includes/navigation-de.html
+++ b/_includes/navigation-de.html
@@ -20,6 +20,7 @@
             </div>
           {% endif %}
         {% endfor %}
+      </div>
         <div class="cta-contact-wrap">
           <a class="cta contact" href="{{ "/de/contact" | relative_url}}">CONTACT US</a>
         </div>
