pae wrap style to push sticky footer

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -28,14 +28,17 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.page-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .content {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   flex: 1 0 auto;
-  margin-top: 2rem;
 }
 h1 {
   font-weight: 900;
