limited flex shrink for story page

--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -4,6 +4,7 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
+  flex: 1 0 auto;
 }
 .expect-offer-wrap {
   display: flex;
