--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -32,13 +32,18 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex: 1 0 auto;
+  > * {
+    flex-shrink: 0;
+  }
 }
 .content {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   flex: 1 0 auto;
+  justify-content: center;
 }
 h1 {
   font-weight: 900;
@@ -93,6 +98,7 @@ body.default-background {
       ),
       url("/crdc/assets/images/Backround-default.jpg");
   background-size: cover;
+  min-height: 100%;
 }
 .fas {
   font-size: 2rem;
