spacing in slogan on show footer

--- a/_includes/navigation-show-de.html
+++ b/_includes/navigation-show-de.html
@@ -1,6 +1,6 @@
 <div class="show-footer-wrap"><div class="show-footer">
 
-  <h1>3 PERFORMERS, 100 DRUMMERS, AND...</h1>
+  <h1>3 PERFORMERS,</h1><h1> 100 DRUMMERS,</h1><h1> AND...</h1>
 
   <div class="show-navigation">
 
