solved german wrapping and some responsiveness in show

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   {% include head-de.html %}
   <body class="default-background">
-    {% include header-de.html %}
-    <div class="content">
-      {{ content }}
+    <div class="page-wrap">
+      {% include header-de.html %}
+      <div class="content">
+        {{ content }}
+      </div>
     </div>
     {% include footer-de.html %}
   </body>
