--- a/_includes/navigation-show-de.html
+++ b/_includes/navigation-show-de.html
@@ -1,7 +1,7 @@
 <div class="show-footer-wrap"><div class="show-footer">
-
+<div class="slogan-wrap">
   <h1>3 PERFORMERS,</h1><h1> 100 DRUMMERS,</h1><h1> AND...</h1>
-
+</div>
   <div class="show-navigation">
 
     {% for item in site.data.navigation-show-de %}
