--- a/_layouts/the-show-de.html
+++ b/_layouts/the-show-de.html
@@ -30,9 +30,7 @@ layout: default-de
 
     <div class="img-show-wrap">
       <img class="img-show" src="{{ page.image | relative_url }}" alt="">
-    </div></div>
-
+    </div>
 </div>
 
 {% include navigation-show-de.html %}
-<!--  is my profile picture online? -->
