--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -86,9 +86,9 @@ html, body {
 html {
   height: 100%;
 }
-// body {
-//   min-height: 100%;
-// }
+body {
+  min-height: 100%;
+}
 body.default-background {
   display: flex;
   flex-direction: column;
