--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -46,6 +46,8 @@
   }
   //story
   .story-content-wrap {
+    max-height: 40rem;
+    width: 90%;
     display: flex;
     flex-direction: column-reverse;
   }
