--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   max-height: 25rem;
-  flex: 1;
   width: 65%;
   max-height: 22rem;
   margin: 1rem auto 2rem auto;
@@ -14,6 +13,7 @@
   border-radius: 1rem;
 }
 .story-text {
+  padding-right: 2rem;
   overflow: scroll;
   max-height: 20rem;
   width: 90%;
