--- a/_layouts/impressum-de.html
+++ b/_layouts/impressum-de.html
@@ -11,10 +11,9 @@ layout: default-de
   </div>
 
   <div class="privacy-policy">
-    <h1>Privacy Policy</h1>
+    <h1>Datenschutz-Richtlinie</h1>
     <div>
       {{ content }}
     </div>
-    <i class="privacy-arrow fas fa-arrow-down"></i>
   </div>
 </div>
