--- a/_includes/navigation-de.html
+++ b/_includes/navigation-de.html
@@ -22,7 +22,7 @@
         {% endfor %}
       </div>
         <div class="cta-contact-wrap">
-          <a class="cta contact" href="{{ "/de/contact" | relative_url}}">CONTACT US</a>
+          <a class="cta contact" href="{{ "/de/contact" | relative_url}}">KONTAKT</a>
         </div>
       </div>
   </nav>
