--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -25,7 +25,7 @@ layout: default
     </form>
   </div>
   <div  class="thanks">
-    <img src="assets/images/mail.png" alt="">
+    <img src="/assets/images/mail.png" alt="">
     <h1>{{page.thank_you_message}}</h1>
   </div>
 </div>
