adjusted alignment for offer in show

--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -10,7 +10,7 @@ layout: default
 
       <p>{{ page.expectation_1_en | markdownify }}</p>
 
-      <p>{{ page.expectation_2_en | markdownify }}</p>
+      <p>{{ page.expectation_2_en | markdownify }}</p> <hr>
 
       <p>{{ page.expectation_3_en | markdownify }}</p>
     </div>
