--- a/_layouts/the-show-de.html
+++ b/_layouts/the-show-de.html
@@ -8,9 +8,9 @@ layout: default-de
     <div class="expectation">
       <h1> {{ page.expectation_title_en }} </h1>
 
-      <p>{{ page.expectation_1_en | markdownify }}</p>
+      <p>{{ page.expectation_1_en | markdownify }}</p> <hr>
 
-      <p>{{ page.expectation_2_en | markdownify }}</p>
+      <p>{{ page.expectation_2_en | markdownify }}</p> <hr>
 
       <p>{{ page.expectation_3_en | markdownify }}</p>
     </div>
