--- a/_layouts/gallery-de.html
+++ b/_layouts/gallery-de.html
@@ -13,7 +13,7 @@ layout: default-de
 
     {% for images in page.images %}
     <div class="carousel-item">
-      <img class="gallery d-block w-100" src= "{{ images.image | relative_url }}" alt="">
+      <img class="gallery d-block w-100" src= "{{ images.image }}" alt="">
     </div>
     {% endfor %}
   </div>
