Added Andrea Zank to friends

--- a/_layouts/friends-de.html
+++ b/_layouts/friends-de.html
@@ -36,7 +36,7 @@ layout: default-de
           <p> Chris Mersmann, Lukas Papierak <br><a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </p>
           <p> Nevermiss Productions<a href="www.nevermiss.de"></a> </p>
           <p> Matteo Carpi<a href="#"></a> </p>
-
+          <p>Andrea Zank</p>
 
     </div>
   </div>
