fixed path for remo logo

--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -16,7 +16,7 @@ layout: default
       <h2>Instruments</h2>
 
           <p> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </p>
-          <p> <a href="www.remo.com">www.remo.com</a> <br><img class="remo" src="/crdc/uploads/Remo-Logo.png" alt=""> </p>
+          <p> <a href="www.remo.com">www.remo.com</a> <br><img class="remo" src="/uploads/Remo-Logo.png" alt=""> </p>
 
     </div>
     <!-- <h2>Beratung</h2>
