fixed links in friends

--- a/_layouts/friends-de.html
+++ b/_layouts/friends-de.html
@@ -8,15 +8,15 @@ layout: default-de
     <div>
       <h2>Aufbau und Metallarbeiten</h2>
 
-          <p> <a href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></p>
+          <p> <a target="_blank" href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></p>
 
     </div>
 
     <div>
       <h2>Instrumente</h2>
 
-          <p> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </p>
-          <p> <a href="www.remo.com">www.remo.com</a> <br><img class="remo" src="/uploads/Remo-Logo.png" alt=""> </p>
+          <p> <a target="_blank" href="http://www.gewamusic.com">www.gewamusic.com</a> </p>
+          <p> <a target="_blank" href="http://www.remo.com">www.remo.com</a> <br><img class="remo" src="/uploads/Remo-Logo.png" alt=""> </p>
 
     </div>
     <!-- <h2>Beratung</h2>
@@ -26,16 +26,16 @@ layout: default-de
     <div>
       <h2>Grafik und Printwerbung</h2>
 
-          <p> <a href="www.druckerei-breiden.de">www.druckerei-breiden.de</a> </p>
+          <p> <a target="_blank" href="http://www.druckerei-breiden.de">www.druckerei-breiden.de</a> </p>
 
     </div>
 
     <div>
       <h2>Fotos/Video/Website</h2>
 
-          <p> Chris Mersmann, Lukas Papierak <br><a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </p>
-          <p> Nevermiss Productions<a href="www.nevermiss.de"></a> </p>
-          <p> Matteo Carpi<a href="#"></a> </p>
+          <p> Chris Mersmann, Lukas Papierak <br><a target="_blank" href="http://www.lukas-papierak.de"> www.lukas-papierak.de </a> </p>
+          <p> Nevermiss Productions <br> <a target="_blank" href="http://www.nevermiss.de">www.nevermiss.de</a> </p>
+          <p> Matteo Carpi </p>
           <p>Andrea Zank</p>
 
     </div>
@@ -44,10 +44,10 @@ layout: default-de
   <div class="network">
     <h1>Freunde und Kollegen</h1>
 
-        <li class="outer-friend"> <a href="www.theatre-pikante.de">www.theatre-pikante.de</a> </p>
-        <li class="outer-friend"> <a href="www.memo-media.de">www.memo-media.de</a> </p>
-        <li class="outer-friend"> <a href="www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </p>
-        <li class="outer-friend"> <a href="www.villagemusiccircles.com">www.villagemusiccircles.com</a> </p>
+        <li class="outer-friend"> <a target="_blank" href="http://www.theatre-pikante.de">www.theatre-pikante.de</a> </p>
+        <li class="outer-friend"> <a target="_blank" href="http://www.memo-media.de">www.memo-media.de</a> </p>
+        <li class="outer-friend"> <a target="_blank" href="http://www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </p>
+        <li class="outer-friend"> <a target="_blank" href="http://www.villagemusiccircles.com">www.villagemusiccircles.com</a> </p>
 
   </div>
 </div>
