--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -8,15 +8,16 @@ layout: default
     <div>
       <h2>Construction and Metal Work</h2>
 
-          <p> <a href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></p>
+      <p> <a target="_blank" href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></p>
+
 
     </div>
 
     <div>
       <h2>Instruments</h2>
 
-          <p> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </p>
-          <p> <a href="www.remo.com">www.remo.com</a> <br><img class="remo" src="/uploads/Remo-Logo.png" alt=""> </p>
+        <p> <a target="_blank" href="http://www.gewamusic.com">www.gewamusic.com</a> </p>
+        <p> <a target="_blank" href="http://www.remo.com">www.remo.com</a> <br><img class="remo" src="/uploads/Remo-Logo.png" alt=""> </p>
 
     </div>
     <!-- <h2>Beratung</h2>
@@ -26,17 +27,17 @@ layout: default
     <div>
       <h2>Graphic Design and Printing</h2>
 
-          <p> <a href="www.druckerei-breiden.de">www.druckerei-breiden.de</a> </p>
+          <p> <a target="_blank" href="http://www.druckerei-breiden.de">www.druckerei-breiden.de</a> </p>
 
     </div>
 
     <div>
       <h2>Fotos/Video/Website</h2>
 
-          <p> Chris Mersmann, Lukas Papierak <br><a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </p>
-          <p> Nevermiss Productions<a href="www.nevermiss.de"></a> </p>
-          <p> Matteo Carpi<a href="#"></a> </p>
-          <p>Andrea Zank</p>
+      <p> Chris Mersmann, Lukas Papierak <br><a target="_blank" href="http://www.lukas-papierak.de"> www.lukas-papierak.de </a> </p>
+      <p> Nevermiss Productions <br> <a target="_blank" href="http://www.nevermiss.de">www.nevermiss.de</a> </p>
+      <p> Matteo Carpi </p>
+      <p>Andrea Zank</p>
 
 
     </div>
