fixed outer circle

--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -46,10 +46,10 @@ layout: default
   <div class="network">
     <h1>Outer Circle</h1>
 
-        <li class="outer-friend"> <a href="www.theatre-pikante.de">www.theatre-pikante.de</a> </p>
-        <li class="outer-friend"> <a href="www.memo-media.de">www.memo-media.de</a> </p>
-        <li class="outer-friend"> <a href="www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </p>
-        <li class="outer-friend"> <a href="www.villagemusiccircles.com">www.villagemusiccircles.com</a> </p>
+    <li class="outer-friend"> <a target="_blank" href="http://www.theaterpikante.de">www.theaterpikante.de</a> </p>
+    <li class="outer-friend"> <a target="_blank" href="http://www.memo-media.de">www.memo-media.de</a> </p>
+    <li class="outer-friend"> <a target="_blank" href="http://www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </p>
+    <li class="outer-friend"> <a target="_blank" href="http://www.villagemusiccircles.com">www.villagemusiccircles.com</a> </p>
 
   </div>
 </div>
